Unfortunate variable name refactor

--- a/FFTs.ipynb
+++ b/FFTs.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -365,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -411,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -447,7 +449,7 @@
     "        gr_gap = N//groups         # and the spacing between groups\n",
     "        \n",
     "        num_butterflies = 2**n     # Calculate the number of butterflys in this stage\n",
-    "        but_gap = num_butterflies  # and the spacing from the top to the bottom\n",
+    "        butterfly_gap = num_butterflies  # and the spacing from the top to the bottom\n",
     "                                   # of each butterfly\n",
     "        \n",
     "        # --------------------- loop through groups -----------------------\n",
@@ -456,18 +458,19 @@
     "            index = gr * gr_gap   # the index of the first butterfly in group\n",
     "            \n",
     "            # -------------------- loop through butterflies ---------------\n",
-    "            for but in range(0, num_butterflies):\n",
-    "                if prnt: print('   butterfly', but, 'top index', but + index, 'bottom index', but + index + but_gap)\n",
+    "            for butterfly in range(0, num_butterflies):\n",
+    "                if prnt: print('   butterfly', butterfly, 'top index', butterfly + index, 'bottom index', butterfly + index + butterfly_gap)\n",
     "                \n",
     "                # store the value at the top of the current butterfly\n",
-    "                temp_top = y[but + index]            \n",
+    "                temp_top = y[butterfly + index]            \n",
     "                \n",
     "                # store the value at the bottom of the current butterfly\n",
-    "                temp_bottom = y[but + index + but_gap] \n",
+    "                temp_bottom = y[butterfly + index + butterfly_gap] \n",
     "                \n",
     "                # butterfly calculation\n",
-    "                y[but + index] = temp_top + (W**but * temp_bottom)\n",
-    "                y[but + index + but_gap] = temp_top - (W**but * temp_bottom)\n",
+    "                temp_twiddle = W**butterfly\n",
+    "                y[butterfly + index] = temp_top + (temp_twiddle * temp_bottom)\n",
+    "                y[butterfly + index + butterfly_gap] = temp_top - (temp_twiddle * temp_bottom)\n",
     "            \n",
     "    # after all of the stages are complete, y should contain the DFT of x\n",
     "    return y"
@@ -482,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
